@@ -1,3 +1,5 @@
+######### 2014-5-10 ##########
+alter table shop_users_user add column user_code varchar(16) NOT NULL;
 ######### 2014-5-9 ##########
 alter table shop_yunda_ppw change weight weight double NOT NULL;
 alter table shop_yunda_ppw change upload_weight upload_weight double NOT NULL;
